0.8-8
- add moonAngle() plus several other astronomy-related functions, e.g. julianDay()

0.8-7
- plotInset(): remove 'bg' and 'fg' arguments
- plotTS(): add 'bg' argument
- rename 'dt' object and functions to 'tdr'
- plotTS(): add argument 'inset'
- read.adp.rdi(): fix a bug in bottom-tracking; add soundSpeed vector
- data(echosounder) created
- formatPosition() created
- plot(echosounder): new arguments atTop and labelsTop
- adp objects now also hold 'percent good' for RDI instruments
- plot.drifter(): improve multi-panel plots
- imagep(): add argument 'missingColor'
- imagep() and drawPalette(): add arguments 'labels' and 'at'

0.8-6
- imagep(): permit POSIXt type for zlim

0.8-5
- reconstruct data(ctd) so plot will focus maps better
- plotInset() added
- grid() works for oce-based time axes
- imagep(..., filledContours): obey ylab argument
- subset(): permit subsetting ADP by pressure
- oce.plot.ts(): obey arguments xaxt and yaxt
- improve support for shapefile coastlines

0.8-4
- replace 'center' argument for plotting topography and coastline with
  clatitude and clongitude
- add 'echosounder' class
- fullFilename(): handle URLs properly
- ADV objects: add access to slow variables (e.g. headingSlow)

0.8-3
- add 'met' class
- subset.oce() handles section objects
- draw.section(): permit xtype="latitude" or "longitude"
- imagpe() has drawPalette="space" option

0.8-2
- fix bug in read.coastline(), reversing lon and lat [issue162]
- fix bug in S4 adp validity checker
- geodDist(): add argument 'alongPath'
- remove compilation warning about doc for summary.ctd()

0.8-1
- switch to S4 classes, and add new accessors and 'show' functions.
- add support for RBR 'rsk' files
- plot.section() now uses 'col' if supplied

0.7-1
- improve oceColorsJet()
- improve plotProfile() vertical range with missing data
- add data(drag)
- plotProfile() and plot.ctd(): add xtype="spice"
- add data(geosecs235)
- plotProfile() and plot.ctd(): add argument 'keepNA'