@@ -211,6 +211,7 @@ export("+.section",
        swViscosity,
        temperature,
        "temperature<-",
+       teos,
        threenum,
        tidem,
        tidemAstron,
